--- a/src/app/balls-generator/balls-generator.component.html
+++ b/src/app/balls-generator/balls-generator.component.html
@@ -1,5 +1,5 @@
 <div class="generator">
-  <div class="ball" draggable="true" *ngFor="let ball of Balls" (mousedown)="onMouseDown($event)" (dragstart)="onDragStart($event)" [ngStyle]="{'background': ball.color, 'width.px': ball.radius, 'height.px': ball.radius}"></div>
+  <div class="ball" draggable="true" *ngFor="let ball of Balls" (mousedown)="onMouseDown($event)" [ngStyle]="{'background': ball.color, 'width.px': ball.radius * 2, 'height.px': ball.radius * 2}"></div>
 </div>
 <input type="color" [(ngModel)]="Balls[0].color">
 <input type="range" [(ngModel)]="Balls[0].radius" min="10" max="100">
