Random generation of ball parameters
Random generation of ball parameters added
Bootstrap added
Some styles changed
Bug with balls from empty draf gixed

--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -3,7 +3,8 @@
   height: 500px;
   border: 1px dashed #000;
   position: relative;
-  clear: both;
+  margin: 0 auto;
+  background: #fff;
 }
 
 .ball {
