--- a/src/app/balls-generator/balls-generator.component.css
+++ b/src/app/balls-generator/balls-generator.component.css
@@ -1,13 +1,14 @@
 .generator {
-  width: 300px;
-  height: 300px;
-  border: 1px solid red;
   display: flex;
-  align-items: center;
   justify-content: center;
   float: left;
+  flex-wrap: wrap-reverse;
+  align-items: flex-start;
+  align-content: center;
+  background: #fff;
+  border: 1px solid #ccc;
 }
 
 .ball {
-  float: left;
+  margin: 3px;
 }
