--- a/src/app/balls-generator/balls-generator.component.html
+++ b/src/app/balls-generator/balls-generator.component.html
@@ -1,6 +1,10 @@
-<div class="generator">
-  <div class="ball" draggable="true" *ngFor="let ball of Balls" (mousedown)="onMouseDown($event)" [ngStyle]="{'background': ball.color, 'width.px': ball.radius * 2, 'height.px': ball.radius * 2}"></div>
+<div class="row">
+  <div class="col-xs-6">
+    <div class="generator jumbotron">
+      <div class="ball" draggable="true" (dragstart)="onDragStart($event, i)" (dragend)="onDragEnd($event, i)" *ngFor="let ball of Balls; let i = index" (mousedown)="onMouseDown($event)" [ngStyle]="{'background': ball.color, 'width.px': ball.radius * 2, 'height.px': ball.radius * 2}"></div>
+    </div>
+  </div>
+  <div class="col-xs-6">
+    <app-canvas [offsetX]="offsetX" [offsetY]="offsetY" [radius]="radius" [color]="color"></app-canvas>
+  </div>
 </div>
-<input type="color" [(ngModel)]="Balls[0].color">
-<input type="range" [(ngModel)]="Balls[0].radius" min="10" max="100">
-<app-canvas [offsetX]="offsetX" [offsetY]="offsetY" [radius]="Balls[0].radius" [color]="Balls[0].color"></app-canvas>
