--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,10 +1,9 @@
 .canvas {
-  width: 500px;
-  height: 500px;
   border: 1px dashed #000;
-  position: relative;
-  margin: 0 auto;
   background: #fff;
+  border-radius: 5px;
+  width: 100%;
+  height: 500px;
 }
 
 .ball {
